include/Win64/Physics.ODEImport.hpp

//-- forward type declarations -----------------------------------------------
struct TdxJointGroup;
struct TdxJointLimitMotor;
struct TdMass;
struct TdxAutoDisable;
struct TdxDampingParameters;
struct TdxContactParameters;
struct TdxQuickStepParameters;
struct TdObject;
struct TdxJointNode;
struct TJointInfo1;
struct TJointInfo2;
struct TdxJoint;
struct TdxPosR;
struct TdxBody;
struct TdxWorld;
struct TdxGeom;
struct TdxSpace;
//-- type declarations -------------------------------------------------------
typedef int TJointFlag;
typedef int TdContactType;
typedef int TBodyFlags;
typedef float TdReal;
typedef float *PdReal;
typedef TdxJointGroup *PdxJointGroup;
typedef PdxJointGroup TdJointGroupID;
struct DECLSPEC_DRECORD TdxJointGroup
{
public:
	int num;
	void *stack;
};
typedef TdxJointLimitMotor *PdxJointLimitMotor;
struct DECLSPEC_DRECORD TdxJointLimitMotor
{
public:
	float vel;
	float fmax;
	float lostop;
	float histop;
	float fudge_factor;
	float normal_cfm;
	float stop_erp;
	float stop_sfm;
	float bounce;
	int limit;
	float limit_err;
};
typedef System::StaticArray<float, 16> TdRealArray;
typedef TdRealArray *PdRealArray;
typedef System::StaticArray<float, 4> TdVector3;
typedef TdVector3 *PdVector3;
typedef System::StaticArray<System::StaticArray<float, 4>, 3> Td3Axis;
typedef Td3Axis *Pd3Axis;
typedef System::StaticArray<int, 3> TdInteger3;
typedef TdInteger3 *PdInteger3;
typedef System::StaticArray<TdxJointLimitMotor, 3> TdxJointLimitMotor3;
typedef TdxJointLimitMotor3 *PdxJointLimitMotor3;
typedef System::StaticArray<float, 4> TdVector4;
typedef TdVector4 *PdVector4;
typedef System::StaticArray<float, 12> TdMatrix3;
typedef TdMatrix3 *PdMatrix3;
typedef System::StaticArray<System::StaticArray<float, 4>, 3> TdMatrix3_As3x4;
typedef TdMatrix3_As3x4 *PdMatrix3_As3x4;
typedef System::StaticArray<float, 16> TdMatrix4;
typedef TdMatrix4 *PdMatrix4;
typedef System::StaticArray<float, 48> TdMatrix6;
typedef TdMatrix6 *PdMatrix6;
typedef TdVector4 TdQuaternion;
typedef TdVector4 *PdQuaternion;
typedef System::StaticArray<float, 6> TdAABB;
struct DECLSPEC_DRECORD TdMass
{
public:
	float mass;
	TdVector4 c;
	TdMatrix3 I;
};
typedef TdMass *PdMass;
struct DECLSPEC_DRECORD TdxAutoDisable
{
public:
	float idle_time;
	int idle_steps;
	float linear_average_threashold;
	float angular_average_threashold;
	unsigned average_samples;
};
struct DECLSPEC_DRECORD TdxDampingParameters
{
public:
	float linear_scale;
	float angular_scale;
	float linear_threahold;
	float angular_threashold;
};
struct DECLSPEC_DRECORD TdxContactParameters
{
public:
	float max_vel;
	float min_depth;
};
struct DECLSPEC_DRECORD TdxQuickStepParameters
{
public:
	int num_iterations;
	float w;
};
typedef TdxGeom *PdxGeom;
typedef PdxGeom *PPdxGeom;
typedef void __cdecl (*TdMovedCallback)(PdxGeom o1);
typedef int __fastcall (*TdTriCallback)(PdxGeom TriMesh, PdxGeom RefObject, int TriangleIndex);
typedef void __fastcall (*TdTriArrayCallback)(PdxGeom TriMesh, PdxGeom RefObject, System::PIntegerArray TriIndices, int TriCount);
typedef int __fastcall (*TdTriRayCallback)(PdxGeom TriMesh, PdxGeom Ray, int TriangleIndex, float u, float v);
typedef TdxWorld *PdxWorld;
typedef TdObject *PdObject;
typedef PdObject *PPdObject;
struct DECLSPEC_DRECORD TdObject
{
public:
	TdxWorld *World;
	TdObject *next;
	PdObject *tome;
	void *userdata;
	int tag;
};
typedef TdxBody *PdxBody;
typedef TdxJoint *PdxJoint;
typedef PdxJoint TdJointID;
typedef TdxJointNode *PdxJointNode;
struct DECLSPEC_DRECORD TdxJointNode
{
public:
	TdxJoint *joint;
	TdxBody *body;
	TdxJointNode *next;
};
struct DECLSPEC_DRECORD TJointInfo1
{
public:
	int m;
	int nub;
};
struct DECLSPEC_DRECORD TJointInfo2
{
public:
	float fps;
	float erp;
	float *J1l;
	float *J1a;
	float *J2l;
	float *J2a;
	int rowskip;
	float *c;
	float *cfm;
	float *lo;
	float *hi;
	int *findex;
};
struct DECLSPEC_DRECORD TdxJoint
{
public:
	TdObject baseObject;
	TJointInfo1 Info1;
	TJointInfo2 Info2;
};
struct DECLSPEC_DRECORD TdxPosR
{
public:
	TdVector3 pos;
	TdMatrix3 R;
};
struct DECLSPEC_DRECORD TdxBody
{
public:
	TdObject baseObject;
	System::Byte Padding;
	TdxJoint *firstjoint;
	int flags;
	TdxGeom *geom;
	TdMass mass;
	TdMatrix3 invI;
	float invMass;
	TdxPosR posr;
	TdVector4 q;
	TdVector3 lvel;
	TdVector3 avel;
	TdVector3 facc;
	TdVector3 tacc;
	TdVector3 finite_rot_axis;
	TdxAutoDisable adis;
	float adis_timeleft;
	int adis_stepsleft;
	TdVector3 *average_lvel_buffer;
	TdVector3 *average_avel_buffer;
	unsigned average_counter;
	int average_ready;
	TdMovedCallback moved_callback;
	TdxDampingParameters dampingp;
	float max_angular_speed;
};
struct DECLSPEC_DRECORD TdxWorld
{
public:
	TdxBody *firstbody;
	TdxJoint *firstjoint;
	int nb;
	int nj;
	TdVector3 gravity;
	float global_erp;
	float global_cfm;
	TdxAutoDisable adis;
	int body_flags;
	TdxQuickStepParameters qs;
	TdxContactParameters contactp;
	TdxDampingParameters dampingp;
	float max_angular_speed;
};
struct DECLSPEC_DRECORD TdxGeom
{
public:
	int _type;
	System::Byte Padding;
	int gflags;
	void *data;
	TdxBody *body;
	TdxGeom *body_next;
	TdxPosR *final_posr;
	TdxPosR *offset_posr;
	TdxGeom *next;
	PdxGeom *tome;
	TdxSpace *parent_space;
	TdAABB aabb;
	unsigned category_bits;
	unsigned collide_bits;
};
struct DECLSPEC_DRECORD TdxSpace
{
public:
	TdxGeom baseGeom;
	int count;
	TdxGeom *first;
	int cleanup;
	int current_index;
	TdxGeom *current_geom;
	int lock_count;
};
//-- var, const, procedure ---------------------------------------------------
#define ODEDLL L"ode64s.dll"
extern DELPHI_PACKAGE int dJOINT_INGROUP;
extern DELPHI_PACKAGE int dJOINT_REVERSE;
extern DELPHI_PACKAGE int dJOINT_TWOBODIES;
extern DELPHI_PACKAGE int dContactMu2;
extern DELPHI_PACKAGE int dContactFDir1;
extern DELPHI_PACKAGE int dContactBounce;
extern DELPHI_PACKAGE int dContactSoftERP;
extern DELPHI_PACKAGE int dContactSoftCFM;
extern DELPHI_PACKAGE int dContactMotion1;
extern DELPHI_PACKAGE int dContactMotion2;
extern DELPHI_PACKAGE int dContactMotionN;
extern DELPHI_PACKAGE int dContactSlip1;
extern DELPHI_PACKAGE int dContactSlip2;
extern DELPHI_PACKAGE int dContactApprox0;
extern DELPHI_PACKAGE int dContactApprox1_1;
extern DELPHI_PACKAGE int dContactApprox1_2;
extern DELPHI_PACKAGE int dContactApprox1;
extern DELPHI_PACKAGE int dxBodyFlagFiniteRotation;
extern DELPHI_PACKAGE int dxBodyFlagFiniteRotationAxis;
extern DELPHI_PACKAGE int dxBodyDisabled;
extern DELPHI_PACKAGE int dxBodyNoGravity;
using namespace Physics;