Source/Physics.ODEImport.pas

//
// The graphics rendering engine GLScene http://glscene.org
//
unit Physics.ODEImport;

(* ************************************************************************
  *                                                                       *
  * Open Dynamics Engine, Copyright (C) 2001,2020 Russell L. Smith.       *
  *                All rights reserved. Web: www.ode.org                  *
  *                                                                       *
  * This library is free software; you can redistribute it and/or         *
  * modify it under the terms of EITHER:                                  *
  *   (1) The GNU Lesser General Public License as published by the Free  *
  *       Software Foundation; either version 2.1 of the License, or (at  *
  *       your option) any later version. The text of the GNU Lesser      *
  *       General Public License is included with this library in the     *
  *       file LICENSE.TXT.                                               *
  *   (2) The BSD-style license that is included with this library in     *
  *       the file LICENSE-BSD.TXT.                                       *
  *                                                                       *
  * This library is distributed in the hope that it will be useful,       *
  * but WITHOUT ANY WARRANTY; without even the implied warranty of        *
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the files    *
  * LICENSE.TXT and LICENSE-BSD.TXT for more details.                     *
  *                                                                       *
  ************************************************************************ *)

(* ************************************************************************
  Some notes;

  Sometimes it's easier and faster to refer to the members of the objects
  directly, like Body.Pos, Geom.Data or Body.Mass, instead of calling the built
  in routines. Be very careful if you do this, because some of the built in
  routines alter states when called.

  Examples

  bGeomSetBody(Geom, Body); // This method must be used so
  Geom.Body := Body; // DON'T DO THIS

  Setting the mass of a body is another example. Typically, reading members is
  fine, but before writing directly to member fields yourself, you should check
  the c source and see what the function/procedure does. The source can be found
  at http://www.q12.org/ode/

  ************************************************************************ *)

interface

// remove . from line below if you are using a generic ODE DLL
{$DEFINE VanillaODE}
{$IFNDEF VanillaODE}
{$DEFINE PARODE}
{$ENDIF}

uses
  System.Classes,
  GLS.ModuleLoader;

const

  // ********************************************************************
  //
  // ODE precision:
  //
  // ODE can be run in Single or Double precision, Single is less precise,
  // but requires less memory.
  //
  // If you choose to run in Single mode, you must deploy the single precision
  // dll (this is default)
  //
  // If you choose to run in Double mode, you must deploy the double precision
  // dll (named ode_double.dll and located in the dll directory)

{$DEFINE cSINGLE}  // Insert . before "$" to make ODEImport double based
{$IFDEF WIN32}
{$IFDEF cSINGLE}
  ODEDLL = 'ode32s.dll';
{$ELSE}
  ODEDLL = 'ode32d.dll';
{$ENDIF}
{$ENDIF}
{$IFDEF WIN64}
{$IFDEF cSINGLE}
  ODEDLL = 'ode64s.dll';
{$ELSE}
  ODEDLL = 'ode64d.dll';
{$ENDIF}
{$ENDIF}
{$IFDEF UNIX}
  ODEDLL = 'libode.so';
{$ENDIF}
{$IFDEF MACOS}
  ODEDLL = 'libode.dylib';
{$ENDIF}
{$IFDEF DARWIN} // MacOS X
  ODEDLL = 'libode.dylib';
{$ENDIF}

const
  // enum (* TRIMESH_FACE_NORMALS, TRIMESH_LAST_TRANSFORMATION ; *)
  TRIMESH_FACE_NORMALS = 0;
  TRIMESH_LAST_TRANSFORMATION = 1;

  // Just generate any contacts (disables any contact refining).
  CONTACTS_UNIMPORTANT = $80000000;

  // Change: New Type added, syntax enforcement
type
  TJointFlag = Integer;

  // These consts now have defined types
const
  // if this flag is set, the joint was allocated in a joint group
  dJOINT_INGROUP: TJointFlag = 1;
  (* if this flag is set, the joint was attached with arguments (0,body).
    our convention is to treat all attaches as (body,0), i.e. so node[0].body
    is always nonzero, so this flag records the fact that the arguments were swapped *)
  dJOINT_REVERSE: TJointFlag = 2;
  (* if this flag is set, the joint can not have just one body attached to it,
    it must have either zero or two bodies attached *)
  dJOINT_TWOBODIES: TJointFlag = 4;

  // Change: New Type added, syntax enforcement
type
  TdContactType = Integer;

  // These consts now have defined types
const
  dContactMu2: TdContactType = $0001;
  dContactFDir1: TdContactType = $0002;
  dContactBounce: TdContactType = $0004;
  dContactSoftERP: TdContactType = $0008;
  dContactSoftCFM: TdContactType = $0010;
  dContactMotion1: TdContactType = $0020;
  dContactMotion2: TdContactType = $0040;
  dContactMotionN: TdContactType = $0080;
  dContactSlip1: TdContactType = $0100;
  dContactSlip2: TdContactType = $0200;

  dContactApprox0: TdContactType = $0000;
  dContactApprox1_1: TdContactType = $1000;
  dContactApprox1_2: TdContactType = $2000;
  dContactApprox1: TdContactType = $3000;

  // Change: New Type added, syntax enforcement
type
  TBodyFlags = Integer;

  // These consts now have defined types
const
  dxBodyFlagFiniteRotation: TBodyFlags = 1; // use finite rotations
  dxBodyFlagFiniteRotationAxis: TBodyFlags = 2;
  // use finite rotations only along axis
  dxBodyDisabled: TBodyFlags = 4; // body is disabled
  dxBodyNoGravity: TBodyFlags = 8; // body is not influenced by gravity

type
{$IFDEF cSINGLE}
  TdReal = single;
{$ELSE}
  TdReal = double;
{$ENDIF}
  PdReal = ^TdReal;

  { define cODEDebugEnabled } // Debug mode

  (* Pointers to internal ODE structures to reproduce C++ classes in Delphi *)
  PdxJointGroup = ^TdxJointGroup;
  TdJointGroupID = PdxJointGroup;

  TdxJointGroup = record
    num: Integer;
    stack: pointer;
  end;

  PdxJointLimitMotor = ^TdxJointLimitMotor;

  TdxJointLimitMotor = record
    vel, fmax: TdReal; // powered joint: velocity, max force
    lostop, histop: TdReal; // joint limits, relative to initial position
    fudge_factor: TdReal; // when powering away from joint limits
    normal_cfm: TdReal; // cfm to use when not at a stop
    stop_erp, stop_sfm: TdReal; // erp and cfm for when at joint limit
    bounce: TdReal; // restitution factor
    // variables used between getInfo1() and getInfo2()
    limit: Integer; // 0=free, 1=at lo limit, 2=at hi limit
    limit_err: TdReal; // if at limit, amount over limit
  end;

  TdRealArray = array [0 .. 15] of TdReal;
  PdRealArray = ^TdRealArray;

  // typedef dReal dVector33[4];
  TdVector3 = array [0 .. 3] of TdReal;
  // Q: Why isn't TdVector3 = array[0..2] of TdReal? A: Because of SIMD alignment.
  PdVector3 = ^TdVector3;

  Pd3Axis = ^Td3Axis;
  Td3Axis = array [0 .. 2] of TdVector3;

  PdInteger3 = ^TdInteger3;
  TdInteger3 = array [0 .. 2] of Integer;

  PdxJointLimitMotor3 = ^TdxJointLimitMotor3;
  TdxJointLimitMotor3 = array [0 .. 2] of TdxJointLimitMotor;

  // typedef dReal dVector4[4];
  TdVector4 = array [0 .. 3] of TdReal;
  PdVector4 = ^TdVector4;

  // typedef dReal dMatrix3[4*3];
  TdMatrix3 = array [0 .. 4 * 3 - 1] of TdReal;
  PdMatrix3 = ^TdMatrix3;

  TdMatrix3_As3x4 = array [0 .. 2, 0 .. 3] of TdReal;
  PdMatrix3_As3x4 = ^TdMatrix3_As3x4;

  // typedef dReal dMatrix4[4*4];
  TdMatrix4 = array [0 .. 4 * 4 - 1] of TdReal;
  PdMatrix4 = ^TdMatrix4;

  // typedef dReal dMatrix6[8*6];
  TdMatrix6 = array [0 .. 8 * 6 - 1] of TdReal;
  PdMatrix6 = ^TdMatrix6;

  // typedef dReal dQuaternion[4];
  TdQuaternion = TdVector4; // array[0..3] of TdReal;
  PdQuaternion = ^TdQuaternion;

  // No typedef for AABB
  TdAABB = array [0 .. 5] of TdReal;

  TdMass = record
    mass: TdReal; // total mass of the rigid body
    c: TdVector4; // center of gravity position in body frame (x,y,z)
    I: TdMatrix3; // 3x3 inertia tensor in body frame, about POR
  end;

  PdMass = ^TdMass;

  TdxAutoDisable = record
    idle_time: TdReal; // time the body needs to be idle to auto-disable it
    idle_steps: Integer; // steps the body needs to be idle to auto-disable it
    linear_average_threashold: TdReal;
    // linear (squared) average velocity threshold
    angular_average_threashold: TdReal;
    // angular (squared) average velocity threshold
    average_samples: longword;
    // size of the average_lvel and average_avel buffers
  end;

  TdxDampingParameters = record
    linear_scale: TdReal; // multiply the linear velocity by (1 - scale)
    angular_scale: TdReal; // multiply the angular velocity by (1 - scale)
    linear_threahold: TdReal; // linear (squared) average speed threshold
    angular_threashold: TdReal; // angular (squared) average speed threshold
  end;

  TdxContactParameters = record
    max_vel: TdReal; // maximum correcting velocity
    min_depth: TdReal; // thickness of 'surface layer'
  end;

  TdxQuickStepParameters = record
    num_iterations: Integer; // number of SOR iterations to perform
    w: TdReal; // the SOR over-relaxation parameter
  end;

  PdxGeom = ^TdxGeom;
  PPdxGeom = ^PdxGeom;

  // Whenever a body has its position or rotation changed during the
  // timestep, the callback will be called (with body as the argument).
  // Use it to know which body may need an update in an external
  // structure (like a 3D engine).
  TdMovedCallback = procedure(o1: PdxGeom); cdecl;

  // Per triangle callback. Allows the user to say if he wants a collision with
  // a particular triangle.
  TdTriCallback = function(TriMesh, RefObject: PdxGeom;
    TriangleIndex: Integer): Integer;

  // Per object callback. Allows the user to get the list of triangles in 1
  // shot. Maybe we should remove this one.
  TdTriArrayCallback = procedure(TriMesh, RefObject: PdxGeom;
    TriIndices: PIntegerArray; TriCount: Integer);

  // Allows the user to say if a ray collides with a triangle on barycentric
  // coords. The user can for example sample a texture with alpha transparency
  // to determine if a collision should occur.
  TdTriRayCallback = function(TriMesh, Ray: PdxGeom; TriangleIndex: Integer;
    u, v: TdReal): Integer;

  PdxWorld = ^TdxWorld;

  PdObject = ^TdObject;
  PPdObject = ^PdObject;

  TdObject = record
    World: PdxWorld; // world this object is in
    next: PdObject; // next object of this type in list
    tome: PPdObject; // pointer to previous object's next ptr
    userdata: pointer; // user settable data
    tag: Integer; // used by dynamics algorithms
  end;

  PdxBody = ^TdxBody;
  PdxJoint = ^TdxJoint;
  TdJointID = PdxJoint;

{$IFDEF PARODE}
  TdJointBreakCallback = procedure(joint: TdJointID); cdecl;

  TJointBreakMode = Integer;

  PdxJointBreakInfo = ^TdxJointBreakInfo;

  TdxJointBreakInfo = record
    flags: Integer;
    b1MaxF: TdVector3; // maximum force on body 1
    b1MaxT: TdVector3; // maximum torque on body 1
    b2MaxF: TdVector3; // maximum force on body 2
    b2MaxT: TdVector3; // maximum torque on body 2
    callback: TdJointBreakCallback;
    // function that is called when this joint breaks
  end;
{$ENDIF}

  PdxJointNode = ^TdxJointNode;

  TdxJointNode = record
    joint: PdxJoint; // pointer to enclosing dxJoint object
    body: PdxBody; // *other* body this joint is connected to
    next: PdxJointNode; // next node in body's list of connected joints
  end;

  // info returned by getInfo1 function. the constraint dimension is m (<=6).
  // i.e. that is the total number of rows in the jacobian. `nub' is the
  // number of unbounded variables (which have lo,hi = -/+ infinity).
  TJointInfo1 = record
    m, nub: Integer;
  end;
